Fix T55387: Render fullscreen from top menu crashes Blender

Would try to use data from global area for the newly created fullscreen area.
This should not happen, so instead of a global area use first area from layout.